Filter pane UI cleanup

--- a/locale/en.json
+++ b/locale/en.json
@@ -39,9 +39,9 @@
             "select_all": "Show All",
             "select_dates": "Select Dates",
             "dates": "Dates",
-            "actions": "Actions",
-            "download_csv": "Download CSV",
-            "download_shp": "Download Shapefile",
+            "export": "Export",
+            "download_csv": "Export CSV",
+            "download_shp": "Export Shapefile",
             "print_report": "Print Report",
             "log_out": "Log Out"
         },
