add timestamp to locales

--- a/locales/es.json
+++ b/locales/es.json
@@ -106,5 +106,8 @@
   },
   "field_value.undefined": {
     "message": "[Ningún valor]"
+  },
+  "field_value.timestamp": {
+    "message": "Marca de Tiempo"
   }
 }
